# HDM

./: LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  analyze_and_fix_background.py  convert_ansi_to_html.py  convert_background_to_white.py  convert_image.py  convert_image_hq.py  convert_image_to_artbox.py  convert_image_to_ascii.py  convert_image_to_braille.py  convert_image_to_braille_enhanced.py  convert_image_to_braille_subpixel.py  convert_image_to_gradient_ascii.py  convert_image_ultra.py  convert_specific_colors.py  dilpriya_ascii.txt  dilpriya_ascii_high.txt  dilpriya_ascii_maximum.txt  dilpriya_banner_code.txt  dilpriya_braille.txt  dilpriya_braille_backup_artbox.txt  dilpriya_braille_backup_ascii.txt  dilpriya_braille_backup_enhanced.txt  dilpriya_braille_backup_gradient.txt  dilpriya_braille_backup_original.txt  dilpriya_braille_backup_ultra.txt  dilpriya_braille_full.txt  dilpriya_braille_resized.txt  dilpriya_braille_skin_only.txt  dilpriya_braille_targeted.txt  dilpriya_braille_white_bg.txt  dilpriya_colored_ascii.txt  dilpriya_ultra.txt  fix_character_only.py  portrait_html.html  pyproject.toml  resize_portrait.py  scale_portrait.py  (+1 more)
docs/: API.md  INSTALLATION.md
examples/: mnist_example.py  synthetic_example.py
hdm_optimizer/: __init__.py  __main__.py  __version__.py  banner.py  optimizer.py
tests/: test_optimizer.py
